# reversi-druid

./: .gitignore  Cargo.toml  README.md
src/: main.rs  texbank.rs
